--- a/_includes/head.html
+++ b/_includes/head.html
@@ -18,28 +18,33 @@
   <!-- Use RSS-2.0 -->
   <!--<link href="{{ site.github.url }}/rss-feed.xml" type="application/rss+xml" rel="alternate" title="{{ site.title }} | {{ site.description }}"/>
   //-->
+ <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Source+Code+Pro">
+ <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Old+Standard+TT">
+ <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Cormorant+SC">
+<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Niramit">
 
+<!--
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=PT+Serif:400,400italic,700%7CPT+Sans:400">
-  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Source+Code+Pro">
+ 
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Quattrocento+Sans">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
-<!-- SANS -->
+
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans">
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto">
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Noto+Sans">
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Niramit">
 
-<!-- SERIF -->
+
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lora">
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Noto+Serif">
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Source+Serif+Pro">
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Cormorant">
 
-<!-- SERIF Titluri -->
 
-  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Old+Standard+TT">
-  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Cormorant+SC">
+
+ 
+ 
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Playfair+Display">
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=EB+Garamond">
 
@@ -50,7 +55,7 @@
 <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Libre+Baskerville">
 <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Cardo"> 
 
-
+-->
 
 
   <script type="text/javascript" async
