--- a/_includes/head.html
+++ b/_includes/head.html
@@ -23,6 +23,20 @@
  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Cormorant+SC">
 <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Niramit">
 <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Source+Serif+Pro">
+
+
+<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Noto+Sans">
+<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto">
+<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans">
+
+<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Noto+Serif">
+<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Source+Serif+Pro">
+<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lora">
+
+<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Cormorant+SC">
+<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Cormorant">
+<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=EB+Garamond">
+ <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Old+Standard+TT">
 <!--
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=PT+Serif:400,400italic,700%7CPT+Sans:400">
  
