--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -26,7 +26,7 @@ body {
 
 @media (max-width: 30em) {
   body {
-    font-family: "Noto Serif";
+    font-family: "Open Sans";
     font-size: 17px;
     line-height: 1.5rem;
 
