--- a/_includes/head.html
+++ b/_includes/head.html
@@ -27,7 +27,7 @@
 
 <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Noto+Sans">
 <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto">
-<link href="https://fonts.googleapis.com/css?family=Open+Sans&amp;subset=latin-ext" rel="stylesheet"> 
+<link href="https://fonts.googleapis.com/css?family=Open+Sans&subset=latin-ext" rel="stylesheet"> 
 
 <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Noto+Serif">
 <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Source+Serif+Pro">
