support inline Latex

--- a/_includes/social-icons.html
+++ b/_includes/social-icons.html
@@ -2,7 +2,7 @@
   {% assign first_char = item.link | slice: 0 %}
   {% if first_char == '/' %}
     <a href="{{ site.baseurl }}{{ item.link }}"><i class="fa fa-{{ item.icon }}" aria-hidden="true"></i></a>
-  {% else %}
+  {% elsif item.link %}
     <a href="{{ item.link }}" target="_blank"><i class="fa fa-{{ item.icon }}" aria-hidden="true"></i></a>
   {% endif %}
 {% endfor %}
