--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -19,7 +19,7 @@
 
 body {
   font-family: "Source Serif Pro", sans-serif;
-  font-size: 18px;
+  font-size: 1.2rem;
   color: #515151;
   line-height: 1.75rem;
   -webkit-font-smoothing: antialiased;
