--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -161,6 +161,7 @@ hr {
 
 .masthead-title a {
   font-size: 2rem;
+	font-weight: bold;
   text-decoration: none;
   color: #505050;
 }
@@ -204,7 +205,7 @@ hr {
   margin-top:3px;
   margin-bottom: 1rem;
   color: #9a9a9a;
-  font-family: 'Quattrocento Sans', sans-serif;
+  font-family: 'Noto Sans', sans-serif;
   font-size:0.8rem;
 }
 
