--- a/_includes/head.html
+++ b/_includes/head.html
@@ -23,6 +23,8 @@
  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Cormorant+SC">
 <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Niramit">
 <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Source+Serif+Pro">
+ <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+
 
 
 <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Noto+Sans">
