--- a/_includes/head.html
+++ b/_includes/head.html
@@ -72,7 +72,21 @@
 <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Cardo"> 
 
 -->
+<script>
 
+(function(m,a,i,l,e,r){m['MailerLiteObject']=e;function f(){
+
+var c={a:arguments,q:[]};var r=this.push(c);return "number"!=typeof r?r:f.bind(c.q);}
+
+f.q=f.q||[];m[e]=m[e]||f.bind(f.q);m[e].q=m[e].q||f.q;r=a.createElement(i);
+
+var _=a.getElementsByTagName(i)[0];r.async=1;r.src=l+'?'+(~~(new Date().getTime()/10000000));
+
+_.parentNode.insertBefore(r,_);})(window, document, 'script', 'https://static.mailerlite.com/js/universal.js', 'ml');
+
+var ml_account = ml('accounts', '799895', 'h1k8l1s5k0', 'load');
+
+</script>
 
   <script type="text/javascript" async
     src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.5/MathJax.js?config=TeX-MML-AM_CHTML">
