--- a/_includes/cookieconsent.html
+++ b/_includes/cookieconsent.html
@@ -1,6 +1,6 @@
-<link rel="stylesheet" type="text/css" href="//cdnjs.cloudflare.com/ajax/libs/cookieconsent2/3.0.2/cookieconsent.min.css" />
+<link rel="stylesheet" type="text/css" href="{{ site.url }}/assets/css/cookieconsent.min.css" />
 
-<script async defer src="//cdnjs.cloudflare.com/ajax/libs/cookieconsent2/3.0.2/cookieconsent.min.js"></script>
+<script async defer src="{{ site.url }}/assets/js/cookieconsent.min.js"></script>
 
 <script>
 
@@ -26,7 +26,7 @@ window.cookieconsent.initialise({
 
   "content": {
 
-    "href": "https://www.dev-eth0.de/privacy-policy"
+    "href": "{{ site.url }}/menu/about.html"
 
   }
 
