--- a/_includes/head.html
+++ b/_includes/head.html
@@ -22,7 +22,7 @@
  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Cormorant+SC">
 <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Niramit">
 <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Source+Serif+Pro">
- <link rel="stylesheet" href="{{ site.url }}/assets/css/font-awesome.min.css">
+ <link rel="stylesheet" href="{{ site.github.url }}/assets/css/font-awesome.min.css">
 
 
 
