--- a/_includes/head.html
+++ b/_includes/head.html
@@ -17,30 +17,11 @@
   <!-- Use RSS-2.0 -->
   <!--<link href="{{ site.github.url }}/rss-feed.xml" type="application/rss+xml" rel="alternate" title="{{ site.title }} | {{ site.description }}"/>
   //-->
- <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Source+Code+Pro">
- <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Old+Standard+TT">
- <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Cormorant+SC">
-<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Niramit">
-<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Source+Serif+Pro">
- <link rel="stylesheet" href="{{ site.github.url }}/assets/css/font-awesome.min.css">
+  <link href="https://fonts.googleapis.com/css?family=Cormorant+SC|Source+Serif+Pro" rel="stylesheet">
 
-
-
-<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Noto+Sans">
-<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto">
-<link href="https://fonts.googleapis.com/css?family=Open+Sans&subset=latin-ext" rel="stylesheet"> 
-
-<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Noto+Serif">
-<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Source+Serif+Pro">
-<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lora">
-
-<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Cormorant+SC">
-<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Cormorant">
-<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=EB+Garamond">
- <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Old+Standard+TT">
 <!--
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=PT+Serif:400,400italic,700%7CPT+Sans:400">
- 
+
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Quattrocento+Sans">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
@@ -58,8 +39,8 @@
 
 
 
- 
- 
+
+
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Playfair+Display">
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=EB+Garamond">
 
@@ -68,7 +49,7 @@
 <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Source+Sans+Pro">
 <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Fahkwang">
 <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Libre+Baskerville">
-<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Cardo"> 
+<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Cardo">
 
 -->
 
@@ -80,10 +61,9 @@
   <!-- Google Analytics -->
   {% include google-analytics.html %}
 
-  
+
   {% include seo.html %}
 
 </head>
 
   <!-- Use Jekyll SEO plugin -->
-  
