--- a/_includes/head.html
+++ b/_includes/head.html
@@ -10,6 +10,7 @@
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta charset="utf-8">
+  <meta name="google-site-verification" content="71Qf7s6Y0VoFdHLPlk4hUE1Hm3NdZWDOTRPB1DFLBTo" />
 
   <link rel="stylesheet" href="{{ site.github.url }}/assets/css/main.css">
   <!-- Use Atom -->
