--- a/_includes/head.html
+++ b/_includes/head.html
@@ -38,7 +38,7 @@
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lora">
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Noto+Serif">
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Source+Serif+Pro">
-  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Cormorant">
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Cormorant+SC">
 
 
 
