--- a/_includes/comments.html
+++ b/_includes/comments.html
@@ -104,7 +104,8 @@ SITE_DATA_COMMENTS
     <fieldset>
             <label for="comment-form-reply">
               <input type="hidden" id="comment-form-reply" name="options[subscribe]" value="email">
-              Notify me of replies by email.
+               <input type="hidden" id="comment-form-reply" name="options[subscribe]" value="name">
+		    
             </label>
     <div>
 		<legend><em>Comments will appear after moderation.</em></legend>
