--- a/_includes/comments.html
+++ b/_includes/comments.html
@@ -104,7 +104,7 @@ SITE_DATA_COMMENTS
     <fieldset>
             <label for="comment-form-reply">
               
-               <input type="hidden" id="comment-form-reply" name="options[subscribe]" value="name">
+               <input type="hidden" id="comment-form-reply" name="options[subscribe]" value="email">
 		    
             </label>
     <div>
