--- a/_includes/comments.html
+++ b/_includes/comments.html
@@ -81,7 +81,7 @@ SITE_DATA_COMMENTS
   <h3>Post a comment:</h3>
   <form method="POST" action="https://staticmanlagr.herokuapp.com/v3/entry/github/samarulmeu/mylagrange/gh-pages/comments">
     <input type="hidden" name="options[origin]" value="{{ site.url }}{{ page.url }}">
-    <input type="hidden" name="options[parent]" value="parentOrigin">
+    <input type="hidden" name="options[parent]" value="{{ site.url }}{{ page.url }}">
     <input name="options[redirect]" type="hidden" value="{{ site.url }}{{ page.url }}">
     <input name="options[slug]" type="hidden" value="{{ page.slug }}">
      <input type="hidden" name="fields[reply_to]" value="">
