--- a/_includes/comments.html
+++ b/_includes/comments.html
@@ -118,7 +118,7 @@ SITE_DATA_COMMENTS
     </div>
 </form>
 
-<script src='https://www.google.com/recaptcha/api.js'></script>
+<script src='https://www.google.com/recaptcha/api.js?render={{ site.reCaptcha.siteKey }}'></script>
 
 
 </p>
