--- a/_includes/comments.html
+++ b/_includes/comments.html
@@ -112,7 +112,7 @@ SITE_DATA_COMMENTS
             </label>
     <div>
 		<legend><em>Comments will appear after moderation.</em></legend>
-		<div class="g-recaptcha" data-sitekey="{{ site.reCaptcha.siteKey }}"></div>
+		<div class="g-recaptcha" data-sitekey="{{ site.reCaptcha.siteKey }}" data-callback="recaptcha_callback"></div>
 		<button type="submit">Submit Comment</button>
     </fieldset>
     </div>
