--- a/_includes/comments.html
+++ b/_includes/comments.html
@@ -113,7 +113,7 @@ SITE_DATA_COMMENTS
     <div>
 		<legend><em>Comments will appear after moderation.</em></legend>
 		<div class="g-recaptcha" data-sitekey="{{ site.reCaptcha.siteKey }}" data-callback="recaptcha_callback"></div>
-		<button type="submit">Submit Comment</button>
+		<button disabled="disabled" type="submit">Submit Comment</button>
     </fieldset>
     </div>
 </form>
