--- a/_includes/comments.html
+++ b/_includes/comments.html
@@ -113,10 +113,16 @@ SITE_DATA_COMMENTS
     <div>
 		<legend><em>Comments will appear after moderation.</em></legend>
 		<div class="g-recaptcha" data-sitekey="{{ site.reCaptcha.siteKey }}" data-callback="recaptcha_callback"></div>
-		<button disabled="disabled" type="submit">Submit Comment</button>
+		<button id="trimite" disabled="disabled" type="submit">Submit Comment</button>
     </fieldset>
     </div>
 </form>
+<script type="text/javascript">
+       function recaptcha_callback() {
+       $('#trimite').removeAttr('disabled');
+        };                                 
+ </script>
+
 
 <script src='https://www.google.com/recaptcha/api.js'></script>
 
