--- a/_includes/comments.html
+++ b/_includes/comments.html
@@ -119,7 +119,7 @@ SITE_DATA_COMMENTS
 </form>
 <script type="text/javascript">
        function recaptcha_callback() {
-       $('#trimite').removeAttr('disabled');
+       document.getElementById("trimite").removeAttr("disabled");
         };                                 
  </script>
 
