--- a/_includes/comments.html
+++ b/_includes/comments.html
@@ -117,14 +117,14 @@ SITE_DATA_COMMENTS
     </fieldset>
     </div>
 </form>
-<script type="text/javascript">
+<script>
        function recaptcha_callback() {
        document.getElementById("trimite").removeAttr("disabled");
         };                                 
  </script>
 
 
-<script src='https://www.google.com/recaptcha/api.js'></script>
+<script src='https://www.google.com/recaptcha/api.js' defer></script>
 
 
 </p>
