--- a/_includes/head.html
+++ b/_includes/head.html
@@ -20,7 +20,7 @@
   <!-- Use RSS-2.0 -->
   <!--<link href="{{ site.github.url }}/rss-feed.xml" type="application/rss+xml" rel="alternate" title="{{ site.title }} | {{ site.description }}"/>
   //-->
-  <link href="https://fonts.googleapis.com/css?family=Cormorant+SC|Source+Serif+Pro" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Cormorant+SC|Source+Serif+Pro|Noto+Serif|PT+Serif" rel="stylesheet">
 
 <!--
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=PT+Serif:400,400italic,700%7CPT+Sans:400">
