--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -20,8 +20,8 @@
 
 
 body {
-  font-family: "Source Serif Pro", sans-serif;
-  font-size: 1.1rem;
+  font-family: "Noto Serif", sans-serif;
+  font-size: 1.2rem;
   color: #515151;
   line-height: 1.75rem;
   -webkit-font-smoothing: antialiased;
