--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -20,7 +20,7 @@
 
 
 body {
-  font-family: "Noto Serif", sans-serif;
+  font-family: "PT Serif", sans-serif;
   font-size: 1.2rem;
   color: #515151;
   line-height: 1.75rem;
