--- a/_includes/head.html
+++ b/_includes/head.html
@@ -11,6 +11,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta charset="utf-8">
   <meta name="google-site-verification" content="QWmMRH5Z2YyLLlF3C4mIl22kTPL6fiOb5rJwvtjbtI0" />
+  <meta name="p:domain_verify" content="bf1ec6a876dbe858b79146295fc78bad"/>
 
 
 
