--- a/_includes/head.html
+++ b/_includes/head.html
@@ -26,6 +26,11 @@
 
   <script type="text/javascript" async
     src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.5/MathJax.js?config=TeX-MML-AM_CHTML">
+    MathJax.Hub.Config({
+        tex2jax: {
+          inlineMath: [['$', '$'], ['\\(', '\\)']]
+        }
+      });
   </script>
 
   <!-- Google Analytics -->
