--- a/_includes/head.html
+++ b/_includes/head.html
@@ -20,6 +20,7 @@
   //-->
 <link href="https://fonts.googleapis.com/css?family=Inria+Serif:400,700&display=swap" rel="stylesheet">
 <link href="https://fonts.googleapis.com/css?family=Questrial&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Source+Code+Pro">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
   <script type="text/javascript" async
