--- a/_includes/head.html
+++ b/_includes/head.html
@@ -38,5 +38,6 @@
 
   <!-- Use Jekyll SEO plugin -->
   {% seo %}
-
+  
+   <script async src="https://identity.netlify.com/v1/netlify-identity-widget.js"></script>
 </head>
