Added subscription form

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -30,6 +30,8 @@ layout: default
   {% endif %}
 </span>
 
+{% include subscription-form.html %}
+
 {% include social-sharing.html %}
 
 {% include related-posts.html %}
