--- a/_includes/subscription-form.html
+++ b/_includes/subscription-form.html
@@ -8,7 +8,7 @@
 <div id="mc_embed_signup">
 <form action="https://subdesigne.us18.list-manage.com/subscribe/post?u=6eb70c296701f92eef8794cab&amp;id=38bbacb895" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
     <div id="mc_embed_signup_scroll">
-	<label for="mce-EMAIL">Subscribe</label>
+	<label for="mce-EMAIL">Subscribe to the mailing list.</label>
 	<input type="email" value="" name="EMAIL" class="email" id="mce-EMAIL" placeholder="email address" required>
     <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
     <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_6eb70c296701f92eef8794cab_38bbacb895" tabindex="-1" value=""></div>
