--- a/_includes/head.html
+++ b/_includes/head.html
@@ -33,7 +33,11 @@
         }
       });
   </script>
-
+  
+  {% if site.tags != "" %}
+    {% include collecttags.html %}
+  {% endif %}
+  
   <!-- Google Analytics -->
   {% include google-analytics.html %}
 
