Added Tags in post
Added a code snipt to display the tags of a post

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -6,6 +6,13 @@ layout: default
   {{ page.title }}
 </h1>
 
+<span>[
+  {% for tag in page.tags %}
+    {% capture tag_name %}{{ tag }}{% endcapture %}
+    <a href="/tag/{{ tag_name }}"><code class="highligher-rouge"><nobr>{{ tag_name }}</nobr></code>&nbsp;</a>
+  {% endfor %}
+]</span>
+
 {% if page.image %}
   <img src="{{ site.github.url }}/assets/img/{{ page.image }}">
 {% endif %}
