--- a/_includes/head.html
+++ b/_includes/head.html
@@ -44,4 +44,14 @@
   <!-- Use Jekyll SEO plugin -->
   {% seo %}
 
+  <meta property="og:locale" content="en_US">
+  <meta property="og:type" content="article">
+  <meta property="og:title" content="{% if page.title %}{{ page.title }}{% else %}{{ site.title }}{% endif %}">
+  <meta property="og:description" content="{% if page.description %}{{ page.description }}{% else %}{{ site.description }}{% endif %}">
+   <meta property="og:url" content="{{ site.url }}{{ page.url }}">
+  <meta property="og:site_name" content="{{ site.title }}">
+  <meta property="og:image" content="{{ site.url }}/images/{{ page.image }}">
+
+  <meta property="og:image:width" content="637" />
+  <meta property="og:image:height" content="403" />
 </head>
