--- a/_includes/head.html
+++ b/_includes/head.html
@@ -43,6 +43,8 @@
 
   <!-- Use Jekyll SEO plugin -->
   {% seo %}
+  
+  {% include general/og.html %}
 
   <meta property="og:locale" content="en_US">
   <meta property="og:type" content="article">
