--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -5,12 +5,14 @@ layout: default
 <h1>
   {{ page.title }}
 </h1>
-<span>[
-{% for tag in page.tags %}
-  {% capture tag_name %}{{ tag }}{% endcapture %}
-  <a class="no-underline" href="/tag/{{ tag_name }}"><code class="highligher-rouge"><nobr>{{ tag_name }}</nobr></code>&nbsp;</a>
-{% endfor %}
-]</span>
+<span class="post-tags">
+    [&nbsp;
+    {% for tag in page.tags %}
+      {% capture tag_name %}{{ tag }}{% endcapture %}
+      <a class="no-underline" href="/tag/{{ tag_name }}"><code class="highligher-rouge"><nobr>{{ tag_name }}</nobr></code>&nbsp;</a>    
+    {% endfor %}
+    ]
+  </span>
 <span class="post-date">
   {{ site.data.settings.post_date_prefix }}
   {% assign d = page.date | date: "%-d"  %}
