--- a/_includes/head.html
+++ b/_includes/head.html
@@ -8,6 +8,12 @@
       {{ page.title }} | {{ site.title }}
     {% endif %}
   </title>
+  
+  {% if page.image %}
+    <meta property="og:image" content="{{ site.url }}/{{ page.image }}" />
+{% endif %}
+
+<meta property="og:description" content="{{ page.description }}" />
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta charset="utf-8">
