--- a/_includes/head.html
+++ b/_includes/head.html
@@ -10,7 +10,7 @@
   </title>
   
   {% if page.image %}
-    <meta property="og:image" content="{{ site.url }}/{{ page.image }}" />
+    <meta property="og:image" content="{{ site.url }}/assets/img/{{ page.image }}" />
 {% endif %}
 
 <meta property="og:description" content="{{ page.description }}" />
