--- a/_includes/social-sharing.html
+++ b/_includes/social-sharing.html
@@ -2,5 +2,6 @@
   <div class="sharing-icons">
     <a href="https://twitter.com/intent/tweet?text={{ page.title }}&amp;url={{ site.github.url }}{{ page.url }}" target="_blank"><i class="fa fa-twitter" aria-hidden="true"></i></a>
     <a href="https://www.facebook.com/sharer/sharer.php?u={{ site.github.url }}{{ page.url }}&amp;title={{ page.title }}" target="_blank"><i class="fa fa-facebook" aria-hidden="true"></i></a>
-  </div>
+    <a href="https://vk.com/share.php?url={{ site.github.url }}{{ page.url }}" target="_blank"><i class="fa fa-vk" aria-hidden="true"></i></a>  
+</div>
 </div>
