--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -63,6 +63,12 @@ img {
   border-radius: 5px;
 }
 
+.center-image
+{
+    margin: 0 auto;
+    display: block;
+}
+
 blockquote {
   margin: 10px 20px 10px;
   padding: 0px 15px;
