#87 Add option in post.html layout to hide social sharing and related posts includes; wrap content in article element

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -5,13 +5,12 @@ layout: default
 <h1>
   {{ page.title }}
 </h1>
-
 {% if page.image %}
   <img src="{{ site.github.url }}/assets/img/{{ page.image }}">
 {% endif %}
-
-{{ content }}
-
+<article>
+  {{ content }}
+</article>
 <span class="post-date">
   {{ site.data.settings.post_date_prefix }}
   {% assign d = page.date | date: "%-d"  %}
@@ -29,11 +28,12 @@ layout: default
     {{ site.author }}
   {% endif %}
 </span>
-
-{% include social-sharing.html %}
-
-{% include related-posts.html %}
-
+{% if site.hide_post_share != true %}
+  {% include social-sharing.html %}
+{% endif %}
+{% if site.hide_related_posts != true %}
+  {% include related-posts.html %}
+{% endif %}
 {% if site.data.settings.disqus.comments %}
   {% include disqus.html %}
 {% endif %}
