--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -59,3 +59,22 @@ blockquote {
 hr {
   border-top: 1px solid #ccc;
 }
+
+/*
+  Tables
+*/
+
+table {
+  border-collapse: collapse;
+  margin-bottom: 30px;
+  width: 100%;
+}
+
+table, th, td {
+  border: 1px solid black;
+}
+
+th, td {
+  padding: 15px;
+  text-align: left;
+}
