#86 Add SCSS variables for font families

--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -1,4 +1,8 @@
 ---
 ---
 
+$header-font-family: "Quattrocento Sans", sans-serif;
+$body-font-family:   "PT Serif", Georgia, "Times New Roman", serif;
+$code-font-family:   "Source Code Pro", monospace;
+
 @import "-sections-dir";
