#89 Replace hardcoded font families with SCSS font variables

--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -3,7 +3,7 @@
 */
 
 body {
-  font-family: "PT Serif", Georgia, "Times New Roman", serif;
+  font-family: $body-font-family;
   font-size: 18px;
   color: #515151;
   line-height: 1.75rem;
@@ -28,7 +28,7 @@ h1 a {
 }
 
 h1, h2, h3, h4, h5, h6 {
-  font-family: "Quattrocento Sans", sans-serif;
+  font-family: $header-font-family;
   color: #333;
 }
 
