--- a/_sass/_home.scss
+++ b/_sass/_home.scss
@@ -20,7 +20,7 @@
 
 .pagination {
   overflow: hidden;
-  font-family: 'Quattrocento Sans', sans-serif;
+  font-family: $header-font-family;
   text-align: center;
 }
 
