--- a/_sass/_default.scss
+++ b/_sass/_default.scss
@@ -24,7 +24,7 @@
   padding-top: 0.5rem;
   padding-bottom: 0.5rem;
   margin-bottom: 4rem;
-  font-family: "Quattrocento Sans", sans-serif;
+  font-family: $header-font-family;
 }
 
 .masthead a:hover {
