--- a/_sass/_post.scss
+++ b/_sass/_post.scss
@@ -17,7 +17,7 @@
   margin-top:3px;
   margin-bottom: 1rem;
   color: #9a9a9a;
-  font-family: 'Quattrocento Sans', sans-serif;
+  font-family: $header-font-family;
   font-size:0.8rem;
 }
 
