#86 Add SCSS for social media icon colours and icon transition time

--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -9,4 +9,16 @@ $dark-gray-color:  #333;
 $light-gray-color: #999;
 $body-color:       #515151;
 
+$icon-transition-time: .5s;
+$envelope-color:  #f39c12;
+$twitter-color:   #00aced;
+$instagram-color: #375989;
+$github-color:    #343434;
+$linkedin-color:  #0073a4;
+$facebook-color:  #3d5b99;
+$pinterest-color: #bd081c;
+$medium-color:    #00AB6C;
+$codepen-color:   black;
+$rss-color:       #ff6600;
+
 @import "-sections-dir";
